--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -43,7 +43,7 @@
     <!-- Signup Button -->
 
     <Button
-        android:id="@+id/button_login"
+        android:id="@+id/button_login_intro"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
@@ -62,16 +62,15 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
-        android:backgroundTint="#FFFFFF"
+        android:layout_marginBottom="208dp"
         android:background="@drawable/button_background_white_with_blue_border"
+        android:backgroundTint="#FFFFFF"
         android:fontFamily="sans-serif-black"
         android:text="New User? Signup"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_login"
-        app:layout_constraintVertical_bias="0.07999998" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
