--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -50,7 +50,9 @@
 
     <!-- LinearLayout container with bluish stroke using a background drawable -->
 
-    <!-- Signup Button -->
+    <!-- Sign-in Button -->
+
+    <!-- Not Registered Yet TextView -->
 
     <LinearLayout
         android:layout_width="0dp"
@@ -63,8 +65,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/signin_title"
-        app:layout_constraintVertical_bias="0.653">
+        app:layout_constraintTop_toBottomOf="@id/signup_subtitle"
+        app:layout_constraintVertical_bias="0.659">
 
         <!-- Vertical LinearLayout to hold the TextViews -->
         <LinearLayout
@@ -102,13 +104,26 @@
         android:id="@+id/button_signin"
         android:layout_width="376dp"
         android:layout_height="44dp"
-        android:layout_marginBottom="216dp"
+        android:layout_marginBottom="80dp"
         android:background="@drawable/button_background_blue"
         android:text="SIGN IN"
         android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/textView_not_registered_yet"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.457"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView_not_registered_yet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="100dp"
+        android:text="Not Registered Yet? Sign Up"
+        android:textColor="#666666"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.469"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
