--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -49,17 +49,24 @@
         app:layout_constraintTop_toBottomOf="@id/signup_title" />
 
     <!-- LinearLayout container with bluish stroke using a background drawable -->
+
+    <!-- Signup Button -->
+
+    <!-- Already Registered TextView -->
+
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        android:padding="16dp"
         android:background="@drawable/edittext_background"
+        android:padding="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/button_signup"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/signup_subtitle"
-        app:layout_constraintBottom_toTopOf="@+id/button_signup">
+        app:layout_constraintVertical_bias="0.717">
 
         <!-- Vertical LinearLayout to hold the TextViews -->
         <LinearLayout
@@ -72,49 +79,60 @@
                 android:id="@+id/editTextName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/edittext_background"
                 android:hint="Name"
                 android:padding="16dp"
-                android:background="@drawable/edittext_background"
-                android:textSize="16sp"
-                android:textColor="#000000" />
+                android:textColor="#000000"
+                android:textSize="16sp" />
 
             <EditText
                 android:id="@+id/editTextEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Email"
                 android:layout_marginTop="16dp"
-                android:padding="16dp"
                 android:background="@drawable/edittext_background"
-                android:textSize="16sp"
-                android:textColor="#000000" />
+                android:hint="Email"
+                android:padding="16dp"
+                android:textColor="#000000"
+                android:textSize="16sp" />
 
             <EditText
                 android:id="@+id/editTextPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Password"
                 android:layout_marginTop="16dp"
-                android:padding="16dp"
                 android:background="@drawable/edittext_background"
-                android:textSize="16sp"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:padding="16dp"
                 android:textColor="#000000"
-                android:inputType="textPassword" />
+                android:textSize="16sp" />
         </LinearLayout>
     </LinearLayout>
 
-    <!-- Signup Button -->
     <Button
         android:id="@+id/button_signup"
         android:layout_width="376dp"
         android:layout_height="45dp"
-        android:layout_marginBottom="188dp"
+        android:layout_marginBottom="44dp"
         android:background="@drawable/button_background_blue"
         android:text="SIGN UP"
         android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/textView_already_registered"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.542"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView_already_registered"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="104dp"
+        android:text="Already Registered? Sign In"
+        android:textColor="#666666"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.485"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
