--- a/app/src/main/res/layout/activity_check_in_page.xml
+++ b/app/src/main/res/layout/activity_check_in_page.xml
@@ -28,18 +28,18 @@
         android:background="@drawable/button_background_blue"
         android:text="Add Transaction"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/show_add_account"
+        app:layout_constraintBottom_toTopOf="@+id/show_add_book"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/show_add_account"
+        android:id="@+id/show_add_book"
         android:layout_width="312dp"
         android:layout_height="50dp"
         android:layout_marginBottom="248dp"
         android:background="@drawable/button_background_blue"
-        android:text="Show/Add Account"
+        android:text="Show/Add Book"
         android:textColor="@color/white"
         android:textCursorDrawable="@android:color/holo_red_light"
         app:layout_constraintBottom_toBottomOf="parent"
