--- a/app/src/main/res/layout/activity_add_book.xml
+++ b/app/src/main/res/layout/activity_add_book.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/dialogForgot"
     android:background="@color/white"
     android:padding="20dp">
@@ -28,7 +28,9 @@
             android:text="Add New Book"
             android:textColor="@color/white"
             android:textSize="17sp"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <TextView
             android:id="@+id/desc"
@@ -38,55 +40,72 @@
             android:layout_marginTop="8dp"
             android:padding="5dp"
             android:layout_marginEnd="20dp"
-            android:text="Enter Book Name"
+            android:text="Enter Book Name and Balance"
             android:textColor="@color/black"
             android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="@id/bookName"
-            app:layout_constraintTop_toBottomOf="@id/title" />
+            app:layout_constraintTop_toBottomOf="@id/title"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <EditText
             android:id="@+id/bookName"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
             android:layout_marginStart="32dp"
-            android:layout_marginBottom="30dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="32dp"
             android:maxLines="1"
             android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:hint="Book Name"
+            app:layout_constraintTop_toBottomOf="@id/desc"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/title"
-            app:layout_constraintVertical_bias="0.584" />
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <EditText
+            android:id="@+id/bookBalance"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="32dp"
+            android:maxLines="1"
+            android:textSize="16sp"
+            android:hint="Balance"
+            app:layout_constraintTop_toBottomOf="@id/bookName"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <Button
             android:id="@+id/btnCancel"
             android:layout_width="0dp"
-            android:layout_height="50dp"
+            android:layout_height="48dp"
             android:layout_marginStart="40dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="24dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="8dp"
             android:text="Cancel"
             android:textColor="@color/white"
             android:textSize="14sp"
+            android:contentDescription="Cancel Button"
             app:cornerRadius="20dp"
-            app:layout_constraintBottom_toBottomOf="@id/dialogBox"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/btnSave"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/bookName"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toBottomOf="@id/bookBalance" />
 
         <Button
             android:id="@+id/btnSave"
             android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="40dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="10dp"
             android:layout_marginEnd="40dp"
-            android:layout_marginBottom="4dp"
+            android:layout_marginBottom="8dp"
             android:text="Save"
             android:textColor="@color/white"
             android:textSize="14sp"
+            android:contentDescription="Save Button"
             app:cornerRadius="20dp"
-            app:layout_constraintBottom_toBottomOf="@id/dialogBox"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/btnCancel" />
 
