--- a/app/src/main/res/layout/activity_all_book.xml
+++ b/app/src/main/res/layout/activity_all_book.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!-- Header TextViews -->
     <TextView
         android:id="@+id/showBook"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
-        android:textSize="32dp"
+        android:textSize="32sp"
         android:layout_centerHorizontal="true"
-        android:layout_gravity="center_horizontal"
         android:text="Show all Books"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -18,60 +20,53 @@
         android:id="@+id/totalBalance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/showBook"
+        android:layout_below="@id/showBook"
         android:layout_alignParentEnd="true"
-        android:layout_gravity="center_horizontal"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="186dp"
         android:text="Total Balance : "
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textSize="24dp" />
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/value"
         android:layout_width="70dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/showBook"
+        android:layout_below="@id/showBook"
         android:layout_alignParentEnd="true"
-        android:layout_gravity="center_horizontal"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="98dp"
         android:text="0.0"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textSize="24dp" />
+        android:textSize="24sp" />
 
-    <LinearLayout
+    <!-- RecyclerView to display books -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/mRecycler"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/newBook"
-        android:layout_below="@+id/totalBalance"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="30dp"
-        android:orientation="vertical">
+        android:layout_height="0dp"
+        android:layout_below="@id/value"
+        android:layout_above="@id/newBook"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:clipToPadding="false"
+        android:paddingBottom="16dp" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/mRecycler"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/totalBalance"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp" />
-
-    </LinearLayout>
-
+    <!-- FloatingActionButton to add a new book -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:layout_width="wrap_content"
         android:id="@+id/newBook"
-        android:src="@drawable/add_book"
-        android:foregroundGravity="center"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:layout_margin="30dp"
-        android:background="@drawable/background_gradient">
-
-    </com.google.android.material.floatingactionbutton.FloatingActionButton>
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="33dp"
+        android:layout_marginBottom="6dp"
+        android:background="@drawable/background_gradient"
+        android:contentDescription="Add a new book"
+        android:foregroundGravity="center"
+        app:srcCompat="@drawable/add_book" />
 
 </RelativeLayout>
