--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -15,17 +15,20 @@
         android:layout_height="wrap_content"
         android:padding="16dp">
 
+        <!-- Book Name -->
         <TextView
             android:id="@+id/textViewBookName"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:textSize="18sp"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/deleteButton"
             tools:text="Book Name" />
 
+        <!-- Balance -->
         <TextView
             android:id="@+id/textViewBalance"
             android:layout_width="wrap_content"
@@ -36,6 +39,19 @@
             app:layout_constraintStart_toStartOf="@id/textViewBookName"
             app:layout_constraintTop_toBottomOf="@id/textViewBookName"
             tools:text="Balance" />
+
+        <!-- Delete Button -->
+        <ImageButton
+            android:id="@+id/deleteButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="delete"
+            android:padding="8dp"
+            app:srcCompat="@drawable/deletebutton"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
